moved search results to the right side, fixed position for header and search form to allow access/visibility while scrolling

--- a/app/src/components/Header.css
+++ b/app/src/components/Header.css
@@ -1,3 +1,9 @@
+.main-header {
+  position: sticky;
+  top: 0;
+  z-index: 3;
+}
+
 h1 {
   font-family: "Jost", sans-serif;
   font-weight: 300;
